--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,16 +10,103 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/textViewDesig"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="Software Engineer"
+            android:textColor="#B7BBBD"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.729"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
         <ImageView
             android:id="@+id/imageView5"
-            android:layout_width="143dp"
-            android:layout_height="162dp"
+            android:layout_width="120dp"
+            android:layout_height="137dp"
             android:layout_marginStart="4dp"
             android:layout_marginTop="4dp"
-            android:src="@drawable/mickey"
-            android:background="@color/black"
+            android:src="@drawable/avatar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Kallol Nowsher Karim"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.824"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+
+        <LinearLayout
+            android:id="@+id/LinearBox1"
+            android:layout_width="283dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="86dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="83dp"
+            android:background="@drawable/back"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.536"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewDesig">
+
+            <TextView
+                android:id="@+id/textViewExpTitle"
+                android:layout_width="84dp"
+                android:layout_height="wrap_content"
+                android:text="Career note"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textViewCareer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="textViewCareer" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/LinearBox2"
+            android:layout_width="283dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="86dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="83dp"
+            android:background="@drawable/back"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.536"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/LinearBox1">
+
+            <TextView
+                android:id="@+id/textViewCarTitle"
+                android:layout_width="121dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="252dp"
+                android:text="Work Experience"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textViewExperience"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="textViewExperience" />
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
