--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/mail"
-        android:icon="@drawable/ic_send_mail"
+        android:icon="@drawable/send"
         android:title="Send mail"
         app:showAsAction="always" />
     <item
